--- a/beginners.html
+++ b/beginners.html
@@ -30,7 +30,7 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">首頁</a></li>
-							<li><a href="beginners/first.html">第一篇</a></li>
+							<li><a href="beginners/First.html">第一篇</a></li>
 							<li><a href="">未來規劃</a></li>
 						</ul>
 						<ul class="actions stacked">
