--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>產業新知 | 詼諧_GreyShoes-Q</title>
+		<title>產業新知 | 詼諧_GreyShoes Q</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
